current SVN version

version 1.1.5 (2011-04-11)
	Isgl3dTexturePrecision enum added to replace #defines (int) - other to become deprecated in v1.2
	Static methods for allocation (autorelease) and initialisation in all framework classes. Modifications accordingly internally and to tests
	Isgl3dShader: output error message when shader files not found
	Isgl3dLight: Fix bug in initWithColorArray
	Isgl3dColorUtil: Fix rounding problem when creating NSString from rgb/rgba colors
	Isgl3dArray: added as container for any data type not just objective c objects (eg structs).
	Isgl3dNode: added clarity to method names involving transformations
	Isgl3dVector3, Isgl3dVector4, Isgl3dMatrix4: added and used in all internal calculations (performance gain)
	Isgl3dMatrix4D: deprecated. Use Isgl3dMatrix4 structure with c methods to store/manipulate 4D matrices (performance gain)
	Isgl3dVector4D: deprecated. Use Isgl3dVector4 structure with c methods to store/manipulate 3D vectors (performance gain)
	Isgl3dVector3D: deprecated. Use Isgl3dVector3 structure with c methods to store/manipulate 3D vectors (performance gain)
	Isgl3dMiniMat: deprecated. Functionality now in Isgl3dMatrix4
	Isgl3dMiniVec: deprecated. Functionality now in Isgl3dVector3 and Isgl3dVector4
	Isgl3dGLObject: removed - functionality added to Isgl3dNode (Isgl3dGLObject was a redundant internal class)
	Isgl3dNode: added isVisible property to allow nodes not to be rendered but remain in scene
	Added support for retina display

version 1.1.4 (2011-03-31)
	Isgl3dColorUtil: fix bug in returning rgb and rgba hex strings
	Isgl3dView: default isOpaque = NO (improved rendering, simplify UI overlay)
	Isgl3dView: default background color to Isgl3dDirector background color
	Isgl3dView: fix bug in combined device + view orientation
	Demos and tutorials updated for new architecture
	Added viewport test demo
	Isgl3dDirector, Isgl3dView: allow orientations as landscape or portrait (eg Isgl3dOrientationPortrait)